--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,37 @@
 			<artifactId>spring-context</artifactId>
 			<version>5.3.14</version>
 		</dependency>
-		
 	</dependencies>
-	
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>
+						1.8
+					</source>
+					<target>
+						1.8
+					</target>
+				</configuration>
+				<executions>
+					<execution>
+						<id>default-compile</id>
+						<phase>compile</phase>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>default-testCompile</id>
+						<phase>test-compile</phase>
+						<goals>
+							<goal>testCompile</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
