--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
 			<version>1.18.26</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.44</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
