--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,4 +35,21 @@
     <servlet-name>S2</servlet-name>
     <url-pattern>/S2</url-pattern>
   </servlet-mapping>
+  <resource-ref>
+    <description>DB Connection</description>
+    <res-ref-name>jdbc/curso</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
+  <servlet>
+    <description></description>
+    <display-name>DatosServlet</display-name>
+    <servlet-name>DatosServlet</servlet-name>
+    <servlet-class>servlets.DatosServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>DatosServlet</servlet-name>
+    <url-pattern>/DatosServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
