--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,5 @@ spring:
   jpa:
     show-sql: true
     database-platform: org.hibernate.dialect.MySQLDialect
+    hibernate:
+      use-new-id-generator-mappings: false
