--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>once.curso</groupId>
-	<artifactId>proyectos</artifactId>
+	<artifactId>proyecto</artifactId>
 	<version>1.0</version>
 	<packaging>war</packaging>
-	<name>proyectos</name>
+	<name>proyectoBanco</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
