--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,7 @@
 spring:
-  autoconfigure:
-    exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://82.223.202.137:3306/BANCO
+    url: jdbc:mysql://82.223.202.137:3306/TIENDA
     username: curso
     password: Cursocurso1;
   jpa:
