--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,7 @@ spring:
   jpa:
     show-sql: true
     database-platform: org.hibernate.dialect.MySQLDialect
+  data:
+    rest:
+      base-path: /api
+   
