--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,12 @@ spring:
     url: jdbc:mysql://82.223.202.137:3306/BANCO
     username: curso
     password: Cursocurso1;
+   
   jpa:
     show-sql: true
     database-platform: org.hibernate.dialect.MySQLDialect
+    hibernate:
+      use-new-id-generator-mappings: false
+ 
   
 
