--- a/bin/src/main/resources/application.yml
+++ b/bin/src/main/resources/application.yml
@@ -1,9 +1,14 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://82.223.202.137:3306/COMPANY
+    url: jdbc:mysql://82.223.202.137:3306/BANCO
     username: curso
     password: Cursocurso1;
+    
   jpa:
     show-sql: true
     database-platform: org.hibernate.dialect.MySQLDialect
+    hibernate:
+      use-new-id-generator-mappings: false
+  
+   
