--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@angular/animations": "^15.2.0",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
-    "@angular/core": "^15.2.0",
+    "@angular/core": "^15.2.9",
     "@angular/forms": "^15.2.0",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
     "rxjs": "~7.8.0",
