--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "boostrap": "^2.0.0",
     "bootstrap": "^5.2.3",
-    "jquery": "^3.6.4",
+    "jquery": "^3.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.5.0",
     "zone.js": "~0.12.0"
