--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@ target/
 .springBeans
 .sts4-cache
 
+### Node ###
+/node_modules
+
+### Miscellaneous ###
+/.angular/cache
+
 ### IntelliJ IDEA ###
 .idea
 *.iws
