--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.9",
     "@angular/forms": "^15.2.0",
+    "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@popperjs/core": "^2.11.7",
+    "angular-material": "^1.2.5",
     "bootstrap": "^5.2.3",
-    "jquery": "^3.6.4",
     "bootstrap-icons": "^1.10.5",
+    "jquery": "^3.6.4",
     "ngx-bootstrap": "^10.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.5.0",
