--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/router": "^15.2.0",
     "@popperjs/core": "^2.11.7",
     "angular-material": "^1.2.5",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
     "jquery": "^3.6.4",
     "material-icons": "^1.13.7",
@@ -34,6 +34,7 @@
     "@angular-devkit/build-angular": "^15.2.6",
     "@angular/cli": "~15.2.6",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/bootstrap": "^5.2.6",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
