--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://82.223.202.137:3306/TIENDA
     username: curso
     password: Cursocurso1;
@@ -10,5 +10,3 @@ spring:
     database-platform: org.hibernate.dialect.MySQLDialect
     hibernate:
       use-new-id-generator-mappings: false
- 
-   
